# stm32-cmake-template

./: CMakeLists.txt  README.md
gdb/: gdb.cfg
